--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-ses-lambda-forwarder",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Forward Inbound SES Emails with Lambda Function",
   "main": "build/index.js",
   "repository": "git@github.com:GreenVine/aws-ses-lambda-forwarder.git",
@@ -18,10 +18,10 @@
     "lib": "node_modules"
   },
   "scripts": {
-    "build": "tsc",
-    "build:slim": "tsc --sourceMap false",
+    "build": "tsc --sourceMap true",
+    "build:slim": "tsc",
     "clean": "rm -rf build/ releases/",
-    "release": "mkdir -p releases && rm -rf node_modules build/ releases/$npm_package_version.zip && yarn install && yarn build:slim && rm -rf node_modules && yarn install --production && zip -x '.git/*' -x 'src/*' -x '.vscode/*' -x '.DS_Store' -r -9 releases/$npm_package_version.zip . && yarn install",
+    "release": "mkdir -p releases && rm -rf node_modules build/ releases/$npm_package_version.zip && npm install && npm run build:slim && rm -rf node_modules && npm install --production && zip -x '.git/*' -x 'src/*' -x '.vscode/*' -x 'releases/*' -x '.DS_Store' -r -9 releases/$npm_package_version.zip . && npm install",
     "test": "npm run lint && mocha src/**/*.spec.ts --require ts-node/register --reporter spec",
     "lint": "tslint --project ./ src/**/*.ts --fix",
     "lint:check": "tslint-config-prettier-check ./tslint.json",
